--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My name is Beverley!!</h1>
+    <h1>My name is Beverley</h1>
 </body>
 </html>
